In Gabble, contacts not on our roster have UNKNOWN presence (e.g. see Bug #25583). In Haze, asking for their presence is an error. This is especially problematic in Telepathy 1.0, where the presence mixin's get_statuses() callback can no longer fail.
Created attachment 85996 [details] [review] [gabble] Add regression test coverage for the presence of a non-roster contact
Created attachment 85997 [details] [review] [Haze 0.8 1/2] Return UNKNOWN status for non-buddies, rather than raising an error This is consistent with Gabble. Also, don't crash if libpurple gives us a PurpleStatusPrimitive outside the range we understand; guess wildly that it's probably AVAILABLE. --- I think this should be merged before 0.8.0, particularly because of the crash fix.
Created attachment 85998 [details] [review] [haze 0.8 2/2] Test unknown presences --- This should also work on next, with s/SIMPLE_// applied.
+1
Fixed in git for 0.7.2 (or probably 0.8.0), thanks
Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.