Return UNKNOWN status for non-buddies, rather than raising an error

This is consistent with Gabble.

Also, don't crash if libpurple gives us a PurpleStatusPrimitive
outside the range we understand; guess wildly that it's probably
AVAILABLE.

Bug: https://bugs.freedesktop.org/show_bug.cgi?id=69474
Reviewed-by: Xavier Claessens <xavier.claessens@collabora.co.uk>